subiendo primera vista

--- a/index.html
+++ b/index.html
@@ -4,15 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css" class="rel">
 </head>
 <body>
-    <div class="container">
-        <div class="logo">
-            <img src="img/YURA.png" alt="">
-        </div>
-        <div class="description">
-            
-        </div>
+    <div class="container1 show" id="container1">
+        <img class="container1-img" id="btnYura" src="img/YURA.png" alt="">
     </div>
+
+    <div class="hide container2" id="container2">
+        <div class="container2_div">
+            <img class="container2-img" id="" src="img/YURA.png" alt="">
+            <div class="container2-login">Ingresar</div>
+            <div class="container2-login">Registrarme</div>
+        </div>
+        
+    </div>
+
+         <!-- <div class="description">
+            <p>
+                Porque sabemos que no hay otro planeta Tierra y cuidar de nuestro ambiente es imprescindible 
+                para seguir viviendo en ello. Es ahí donde surge una idea de concientizar a las personas a través de una 
+                App que les permita adoptar una planta y guiarlos en el proceso de su cuidado. Las personas tendrán a su 
+                disposición una galería de imágenes de distintas plantas que podrá ver su información y datos importantes; 
+                las personas podrán elegir las plantas que desean adoptar generando una responsabilidad para su cuidado, 
+                también deben ponerle un nombre, como si naciera un hijo y ellos tomaran el rol de padres. Nosotros les 
+                facilitaremos la entrega de la planta ya sea a su domicilio o en un punto de entrega, pero no queda ahí, 
+                para ello las personas deben tener un registro y a través de la app podrán encontrar nuestra guía para 
+                cuidar de la plantita que han elegido, también la app medirá el progreso de sus cuidados. Pondremos una 
+                foto galería para que las personas que hayan adoptado puedan compartir sus procesos con el cuidado de la 
+                planta, como si tuvieran una red social. Finalmente pondremos muchos tips y guías para el cuidado del medio 
+                ambiente.
+            </p>
+        </div>
+        -->
+    <script src="script.js"></script>
 </body>
 </html>
