--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 
 
     <div class="main" id="main">
-        <!-- <h1> pagina principal</h1>
-        <img src="img/galeria_ok.jpg" alt=""> -->
+        <div class="main-container">
+            <h1> pagina principal</h1>
+            <img src="img/galeria_ok.jpg" alt="">
+        </div>
     </div>
          <!-- <div class="description">
             <p>
