imagen del contenido

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="ingresar-container">
                 <input type="email" class="ingresar-container--input" placeholder="Ingrese su usuario">
                 <input type="password" class="ingresar-container--input" placeholder="Ingrese su password">
-                <div class="container2-login" id="ingresar-btnIngresar">Ingresar</div>
+                <div class="container2-login" id="ingresar-btnIngresar">Login</div>
 
             </div>
             <div class="ingresar-logo-login">
@@ -52,10 +52,10 @@
     </div>
 
 
-    <div class="main" id="main">
+    <div class="main hide" id="main">
         <div class="main-container">
-            <h1> pagina principal</h1>
-            <img src="img/galeria_ok.jpg" alt="">
+            <!-- <h1> pagina principal</h1> -->
+            <img src="contenido/WhatsApp Image 2020-05-30 at 16.41.52.jpeg" alt="">
         </div>
     </div>
          <!-- <div class="description">
