texto mover cod
escribí el texto: ver cod

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- diseño de la primera vista -->
     <div class="container1 show" id="container1">
         <img class="container1-img" id="btnYura" src="img/YURA.png" alt="">
+        mover cod
     </div>
 
     <!-- diseño de la segunda vista -->
